Font size fix for input, ensuring we don't zoom in on mobile; Adds Typeahead dependency so it works

--- a/src/scss/04-layouts/_program-finder.scss
+++ b/src/scss/04-layouts/_program-finder.scss
@@ -33,7 +33,7 @@
             border: 0;
             border-top-left-radius: 6px;
             border-bottom-left-radius: 6px;
-            font-size: .875rem;
+            font-size: 1.5rem;
             font-weight: 700;
             outline: none;
             padding: 1.125rem 2.6875rem 1.0625rem 1.125rem;
